# NeuroForge

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PYTHON_ENV.md  README.md  generate_ppt.py  llm_test_report.md  perception_config_example.yaml  pyproject.toml  test_novel_agent_llm.py  test_perception_system.py  test_report.md
demo/pyagentforge/: .env.example  CHANGELOG.md  MIGRATION.md  README.md  SYSTEM_BUILD_SPEC.md  pyproject.toml
demo/pyagentforge/docs/: API_REFERENCE.md
demo/pyagentforge/docs/Apis/: 02-providers-api.md  03-tools-api.md  05-plugin-system-api.md  06-configuration-api.md  README.md
demo/pyagentforge/examples/: mcp_stdio_example.py  v3_architecture_demo.py
demo/pyagentforge/pyagentforge/: __init__.py
demo/pyagentforge/pyagentforge/agents/: __init__.py
demo/pyagentforge/pyagentforge/api/: __init__.py  rate_limit.py  websocket.py
demo/pyagentforge/pyagentforge/automation/: scheduler.py  task.py
demo/pyagentforge/pyagentforge/capabilities/: __init__.py
demo/pyagentforge/pyagentforge/codesearch/: config.py  tool.py
demo/pyagentforge/pyagentforge/commands/: __init__.py  loader.py  parser.py  registry.py
demo/pyagentforge/pyagentforge/config/: plugin_config.py
demo/pyagentforge/pyagentforge/core/: __init__.py  context.py  context_aware.py  events.py  failover.py  model_registry.py  parallel.py  thinking.py
demo/pyagentforge/pyagentforge/engine/: __init__.py
demo/pyagentforge/pyagentforge/foundation/: __init__.py
demo/pyagentforge/pyagentforge/kernel/: __init__.py  context.py  engine.py
demo/pyagentforge/pyagentforge/lsp/: manager.py
demo/pyagentforge/pyagentforge/mcp/: __init__.py  transport.py
demo/pyagentforge/pyagentforge/models/: __init__.py  agent.py  base.py
demo/pyagentforge/pyagentforge/plugin/: base.py  dependencies.py  loader.py  manager.py
demo/pyagentforge/pyagentforge/providers/: factory.py  google_provider.py  openai_provider.py
demo/pyagentforge/pyagentforge/skills/: loader.py  models.py  registry.py
demo/pyagentforge/pyagentforge/tools/: __init__.py  permission.py  registry.py
demo/pyagentforge/pyagentforge/utils/: __init__.py
demo/pyagentforge/tests/codesearch/: __init__.py  test_codesearch.py
demo/pyagentforge/tests/glm_integration/: API_ENDPOINT_TEST_RESULTS.md  DELIVERY_SUMMARY.md  FINAL_INTEGRATION_TEST_REPORT.md  GLM-4.7-TEST-REPORT.md  GLM-5-TOOL-TEST-REPORT-v2.md  README.md  TESTING_GUIDE.md  TOOL_CALLING_SOLUTION.md  conftest.py  quick_test.py  stress-test-report.json  stress-test-report.md  test-report.md  test_basic_functionality.py  test_integration.py  test_output.txt  test_streaming.py  test_tools_execution.py  test_tools_execution_v2.py
main/Agent/: __init__.py  config.yaml  pyproject.toml
main/Agent/active-agent/: agent.yaml  system_prompt.md
main/Agent/core/: __init__.py  config.py  directory.py  plan_manager.py
main/Agent/mate-agent/: agent.yaml  system_prompt.md
main/Agent/mate-agent/docs/: README.md
main/Agent/mate-agent/templates/: __init__.py  loader.py
main/Agent/mate-agent/tools/: __init__.py  base.py  registry.py
main/Agent/passive-agent/: agent.yaml  system_prompt.md
main/Agent/tests/: test_plan_manager.py  test_spawn_subagent.py
main/Long-memory/embeddings/: .gitignore  IMPLEMENTATION.md  PLUGIN.py  QUICKSTART.md  README.md  __init__.py  config.py  embeddings_provider.py  examples.py  plugin_config.yaml  pyproject.toml  requirements.txt  setup.py  test_embeddings.py  test_plugin.py
main/Long-memory/long-memory/: =0.4.22  PLUGIN.py  README.md  __init__.py  config.py  models.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  vector_store.py
main/Long-memory/long-memory/memory_processor/: PLUGIN.py  README.md  __init__.py  config.py  llm_analyzer.py  processor_engine.py
main/Long-memory/long-memory/middleware/: __init__.py  auto_memory.py
main/Long-memory/long-memory/super_compress/: PLUGIN.py  __init__.py  budget_manager.py  compress_engine.py  summary_generator.py
main/Long-memory/long-memory/tests/: test_plugin.py  test_standalone.py  test_vector_store.py
main/Long-memory/long-memory/tools/: __init__.py  memory_delete.py  memory_list.py  memory_search.py  memory_store.py
main/Service/: README.md  __init__.py  pyproject.toml
main/Service/config/: __init__.py  settings.py
main/Service/core/: __init__.py  registry.py
main/Service/docs/: API_FULL.md  README.md
main/Service/docs/00-common/: api-conventions.md  llm-adapter.md
main/Service/docs/01-health/: health-root.md
main/Service/docs/02-tools/: tools.md
main/Service/docs/03-agents/: agents.md
main/Service/docs/04-plans/: plans.md
main/Service/docs/05-proxy/: execution.md  sessions.md  workspaces.md
main/Service/docs/99-llm/: endpoint-catalog.md
main/Service/events/: __init__.py  filter.py  types.py
main/Service/gateway/: __init__.py  app.py
main/Service/persistence/: __init__.py  store.py
main/Service/schemas/: __init__.py  agents.py  legacy_runtime.py  models.py  proxy.py
main/Service/services/: __init__.py  agent_service.py  base.py  legacy_runtime_service.py  model_config_service.py
main/Service/tests/: conftest.py  test_cli.py  test_health.py  test_legacy_runtime_api.py  test_model_config.py  test_tools.py
main/agentforge-engine/: CHANGELOG.md  LLM_CONFIG_README.md  README.md  llm_config.example.json  pyproject.toml
main/agentforge-engine/examples/: framework_demo.py  glm_example.py  lsp_example.py  mcp_stdio_example.py  v3_architecture_demo.py
main/agentforge-engine/pyagentforge/: .v2-structure-backup.md  __init__.py  client.py  protocols.py
main/agentforge-engine/scripts/: verify_commands.py
main/agentforge-engine/tests/: README.md  conftest.py  run_coverage.py  run_tests.py  test_api_removed.py  test_client_multi_loop.py  test_commands.py  test_config.py  test_core.py  test_deep_refactor_verification.py  test_glm_regression.py  test_hooks.py  test_integration.py  test_llm_client.py  test_optimizations.py  test_public_api.py  test_rightcodes.py  test_skills.py  test_stream.py  test_tools.py  v3_system_test.py
(+1017 files in other folders)
