[project]
name = "neuroforge-agent"
version = "1.0.0"
description = "NeuroForge Agent 底座 (目录管理、MateAgent 工具、Plan 管理)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyagentforge>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# NOTE: `mate-agent/` contains a hyphen and is loaded dynamically via
# main/Agent/__init__.py; the directory name is part of the Agent ID contract.
# This pyproject.toml is intentionally a dependency manifest only (no
# build-system) because Agent lives inside the monorepo and is consumed from
# source via the workspace layout rather than distributed as a wheel.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
