[project]
name = "neuroforge-long-memory"
version = "0.1.0"
description = "NeuroForge Long Memory plugin (ChromaDB backed)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyagentforge>=3.0.0",
    "chromadb>=0.4.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "super_compress/tests",
    "memory_processor/tests",
]
asyncio_mode = "auto"
pythonpath = [".", "../../agentforge-engine"]
